--- a/src/main/resources/config/winoda/messages_de.properties
+++ b/src/main/resources/config/winoda/messages_de.properties
@@ -1,35 +1,46 @@
 
 browse.genre = Materialarten
 
-component.mods.browse.genre               = Materialart
-component.mods.genre                      = Materialart:
-component.mods.metaData.dictionary.status = Status:
-component.user2.message.noPassword        = Bitte geben Sie Ihr Passwort ein!
+component.mods.browse.genre                   = Materialart
+component.mods.genre                          = Materialart:
+component.mods.metaData.dictionary.status     = Status:
+component.user2.message.noPassword            = Bitte geben Sie Ihr Passwort ein!
 
-metaData.quote = Teilen und Zitieren
+metaData.quote                                = Teilen und Zitieren
 
-mir.abstract.text               = Inhaltliche Beschreibung
-mir.help.abstract               = Bitte beschreiben Sie das Material, z. B. Inhalt, Umfang, Zielgruppe etc. 
-mir.help.genre                  = Klassifizierung des Materials nach Art.
-mir.help.institutes             = Bitte w\u00E4hlen Sie Ihre Fakult\u00E4t / Ihr Institut.\r\n
-mir.help.language               = Sprache, in der das Material verfasst ist, ggf. auch mehrsprachig
-mir.help.title                  = Titel, Benennung des Materials
-mir.institution                 = Fakult\u00E4t/Institut
-mir.language                    = Sprache des Materials
-mir.placeholder.response.search = Suche in den Materialien
-mir.subject.topic               = Schlagwort(e)
+mir.abstract.text                             = Inhaltliche Beschreibung
+mir.editor.heading.classification             = Einordnung
+mir.help.abstract                             = Bitte beschreiben Sie das Material, z. B. Inhalt, Umfang, Zielgruppe etc. 
+mir.help.genre                                = Klassifizierung des Materials nach Art.
+mir.help.institutes                           = Bitte w\u00E4hlen Sie Ihre Fakult\u00E4t / Ihr Institut.\r\n
+mir.help.language                             = Sprache, in der das Material verfasst ist, ggf. auch mehrsprachig
+mir.help.title                                = Titel, Benennung des Materials
+mir.institution                               = Fakult\u00E4t/Institut
+mir.language                                  = Sprache des Materials
+mir.placeholder.response.search               = Suche in den Materialien
+mir.subject.topic                             = Schlagwort(e)
 
-object.editObject = Bearbeiten dieses Materials
+object.editObject                             = Bearbeiten dieses Materials
 
-oer.browse.areaOfExpertise         = Fachgebiete
-oer.class.areaOfExpertise          = Fachgebiete:
-oer.class.languageLevel            = Sprachniveau:
-oer.form.search.headline           = Suche nach Lehrmaterialien
-oer.form.search.text               = Alle beschreibenden Informationen
-oer.help.class.areaOfExpertise     = Bitte w\u00E4hlen Sie ein oder mehrere Fachgebiete aus, auf die sich das Material bezieht.\r\nWir verwenden die Systematik der F\u00E4chergruppen, Lehr- und Forschungsbereiche der statistischen \u00C4mter (DESTATIS).
-oer.help.class.languageLevel       = Sprachniveau, auf das das Lehrmaterial ausgerichtet ist
-oer.selfregistration.email.subject = OER Benutzerkennung angelegt
+oer.browse.areaOfExpertise                    = Fachgebiete
+oer.class.areaOfExpertise                     = Fachgebiete:
+oer.class.languageLevel                       = Sprachniveau:
+oer.form.search.headline                      = Suche nach Lehrmaterialien
+oer.form.search.text                          = Alle beschreibenden Informationen
+oer.help.class.areaOfExpertise                = Bitte w\u00E4hlen Sie ein oder mehrere Fachgebiete aus, auf die sich das Material bezieht.\r\nWir verwenden die Systematik der F\u00E4chergruppen, Lehr- und Forschungsbereiche der statistischen \u00C4mter (DESTATIS).
+oer.help.class.languageLevel                  = Sprachniveau, auf das das Lehrmaterial ausgerichtet ist
+oer.selfregistration.email.subject            = OER Benutzerkennung angelegt
 
-results.nObjects  = {0} Materialien gefunden
-results.noObject  = Keine Materialien gefunden
-results.oneObject = Es wurde ein Material gefunden
+results.nObjects                              = {0} Materialien gefunden
+results.noObject                              = Keine Materialien gefunden
+results.oneObject                             = Es wurde ein Material gefunden
+
+editor.search.mir.name                        = Person
+editor.search.mir.genre                       = Materialart
+editor.search.mir.genre.tooltip               = Bitte w\u00E4hlen Sie die Materialart aus.
+editor.search.mir.areaOfExpertise             = Fachgebiete
+component.mods.editor.search.simple.pagetitle = Suche nach Lehrmaterialien
+editor.search.mir.areaOfExpertise.tooltip     = Bitte w\u00E4hlen Sie ein Fachgebiete aus, auf die sich das Material bezieht.\r\nWir verwenden die Systematik der F\u00E4chergruppen, Lehr- und Forschungsbereiche der statistischen \u00C4mter (DESTATIS).
+editor.search.mir.language                    = Sprache des Materials
+editor.search.mir.language.tooltip            = Sprache, in der das Material verfasst ist, ggf. auch mehrsprachig
+component.mods.editor.search.complex.pagetitle = Suche nach Lehrmaterialien
