WINODA-5 Added missing translations

--- a/src/main/resources/config/winoda/messages_en.properties
+++ b/src/main/resources/config/winoda/messages_en.properties
@@ -1,35 +1,46 @@
 
-browse.genre = Kinds of Material
+browse.genre                                                        = Kinds of Material
 
-component.mods.browse.genre               = Kind of Material
-component.mods.genre                      = Kind of Material:
-component.mods.metaData.dictionary.status = Status:
-component.user2.message.noPassword        = Please enter your password!
+component.mods.browse.genre                                         = Kind of Material
+component.mods.genre                                                = Kind of Material:
+component.mods.metaData.dictionary.status                           = Status:
+component.user2.message.noPassword                                  = Please enter your password!
 
-metaData.quote = Share and cite
+metaData.quote                                                      = Share and cite
 
-mir.abstract.text               = Description of content
-mir.help.abstract               = Please describe the material, e.g. contents, extend, target audience
-mir.help.genre                  = Classification of material by type.
-mir.help.institutes             = Please choose your faculty / your institute.
-mir.help.language               = Language used in the material 
-mir.help.title                  = Title, Labeling of material
-mir.institution                 = Faculty/Institute
-mir.language                    = Language used
-mir.placeholder.response.search = Search within materials
-mir.subject.topic               = Keyword(s)
+mir.abstract.text                                                   = Description of content
+mir.editor.heading.classification                                   = Classification
+mir.help.abstract                                                   = Please describe the material, e.g. contents, extend, target audience
+mir.help.genre                                                      = Classification of material by type.
+mir.help.institutes                                                 = Please choose your faculty / your institute.
+mir.help.language                                                   = Language used in the material 
+mir.help.title                                                      = Title, Labeling of material
+mir.institution                                                     = Faculty/Institute
+mir.language                                                        = Language used
+mir.placeholder.response.search                                     = Search within materials
+mir.subject.topic                                                   = Keyword(s)
 
-object.editObject = Edit this material
+object.editObject                                                   = Edit this material
 
-oer.browse.areaOfExpertise         = Area of Expertise
-oer.class.areaOfExpertise          = Area of Expertise:
-oer.class.languageLevel            = Language level:
-oer.form.search.headline           = Search for educational resources
-oer.form.search.text               = All descriptive information
-oer.help.class.areaOfExpertise     = Please choose a matching area of expertise the material is intended for.
-oer.help.class.languageLevel       = Language level the learning material is targeted for
-oer.selfregistration.email.subject = OER user account created
+oer.browse.areaOfExpertise                                          = Area of Expertise
+oer.class.areaOfExpertise                                           = Area of Expertise:
+oer.class.languageLevel                                             = Language level:
+oer.form.search.headline                                            = Search for educational resources
+oer.form.search.text                                                = All descriptive information
+oer.help.class.areaOfExpertise                                      = Please choose a matching area of expertise the material is intended for.
+oer.help.class.languageLevel                                        = Language level the learning material is targeted for
+oer.selfregistration.email.subject                                  = OER user account created
 
-results.nObjects  = {0} materials found
-results.noObject  = No materials found
-results.oneObject = One material found
+results.nObjects                                                    = {0} materials found
+results.noObject                                                    = No materials found
+results.oneObject                                                   = One material found
+
+editor.search.mir.name                                              = Person
+editor.search.mir.genre                                             = Type of material
+editor.search.mir.genre.tooltip                                     = Please go out the type of material.
+editor.search.mir.areaOfExpertise                                   = Subjects
+component.mods.editor.search.simple.pagetitle                       = Search for teaching materials
+editor.search.mir.areaOfExpertise.tooltip                           = Please be a specialist area to which the material refers.
+editor.search.mir.language                                          = Language of the material
+editor.search.mir.language.tooltip                                  = Language in which the material is written may also be multilingual
+component.mods.editor.search.complex.pagetitle                      = Search for teaching materials
